--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,11 @@
 <resources>
 
     <style name="Theme.GameApp" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.GameApp.Splash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/splash_color</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/splash_icon</item>
+        <item name="postSplashScreenTheme">@style/Theme.GameApp</item>
+    </style>
+
 </resources>
